--- a/public/index.html
+++ b/public/index.html
@@ -51,5 +51,6 @@
       }
     });
   </script>
+  <script id="omnidimension-web-widget" async src="https://backend.omnidim.io/web_widget.js?secret_key=861b0b6b7734b290907323c0bfb36a72" ></script>
 </body>
 </html>
